Added product card

--- a/app/src/main/res/layout/buy_input_product_home_card.xml
+++ b/app/src/main/res/layout/buy_input_product_home_card.xml
@@ -1,6 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dimen_10dp"
+            android:layout_marginTop="@dimen/dimen_10dp">
+
+            <ImageView
+                android:id="@+id/product_cover"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dimen_10dp"
+                android:src="@drawable/placeholder" />
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmerFrame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:alpha=".7"
+                app:shimmer_duration="1500">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/placeholder" />
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+            <TextView
+                android:id="@+id/percentage_sale_off"
+                android:layout_width="43dp"
+                android:layout_height="43dp"
+                android:background="@drawable/round_badge_drawable"
+                android:fontFamily="@font/josefin_sans"
+                android:gravity="center"
+                android:padding="6dp"
+                android:text="16% OFF"
+                android:textColor="@android:color/white"
+                app:autoSizeTextType="uniform" />
+
+        </RelativeLayout>
+        <TextView
+            android:id="@+id/product_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:text="@string/product_title"
+            android:textColor="@color/textColorSecondary"/>
+
+        <RelativeLayout
+            android:id="@+id/product_like_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/first_star"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            app:srcCompat="@drawable/ic_star_rate"
+            tools:ignore="VectorDrawableCompat" />
+
+        <ImageView
+            android:id="@+id/second_star"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/first_star"
+            app:srcCompat="@drawable/ic_star_rate"
+            tools:ignore="VectorDrawableCompat" />
+
+
+        <ImageView
+            android:id="@+id/third_star"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/second_star"
+            app:srcCompat="@drawable/ic_star_rate"
+            tools:ignore="VectorDrawableCompat" />
+
+        <ImageView
+            android:id="@+id/fourth_star"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/third_star"
+            app:srcCompat="@drawable/ic_star_rate"
+            tools:ignore="VectorDrawableCompat" />
+
+        <ImageView
+            android:id="@+id/fifth_star"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/fourth_star"
+            app:srcCompat="@drawable/ic_star_border"
+            tools:ignore="VectorDrawableCompat" />
+        </RelativeLayout>
+        <TextView
+            android:id="@+id/produce_overall_rating"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="@dimen/dimen_5dp"
+            android:layout_toEndOf="@id/fifth_star"
+            android:ellipsize="end"
+            android:fontFamily="@font/josefin_sans"
+            android:maxLines="1"
+            android:text="430 Ratings"
+            android:textSize="14sp"
+            android:gravity="center"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/product_price_old"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/josefin_sans"
+                android:text="UGX : 15,000"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/product_price_new"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_5dp"
+                android:fontFamily="@font/josefin_sans"
+                android:text="UGX : 1,200"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:gravity="center"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
