--- a/app/src/main/res/layout/buy_inputs_sub_categories_6.xml
+++ b/app/src/main/res/layout/buy_inputs_sub_categories_6.xml
@@ -12,7 +12,7 @@
     android:gravity="center_vertical" >
 
 
-    <com.myfarmnow.myfarmcrop.customs.CircularImageView
+    <com.cabral.emaishapay.customs.CircularImageView
         android:id="@+id/sub_category_image"
         android:layout_width="40dp"
         android:layout_height="40dp"
