--- a/app/src/main/res/layout/buy_inputs_f_products_vertical.xml
+++ b/app/src/main/res/layout/buy_inputs_f_products_vertical.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_orders_home"
+            android:id="@+id/toolbar_product_home"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
