added default currency code

--- a/app/src/main/res/layout/buy_sell_home_fragment.xml
+++ b/app/src/main/res/layout/buy_sell_home_fragment.xml
@@ -10,15 +10,13 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        app:elevation="0dp">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/buy_inputs_home_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:elevation="0dp"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
