--- a/app/src/main/res/layout/buy_inputs_animated_ic_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_animated_ic_cart.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:src="@drawable/toggle_ic_cart"
+        android:src="@drawable/ic_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
