Changes made in transact with customers menu items

--- a/app/src/main/res/layout/dialog_agent_customer_balance_inquiry.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_balance_inquiry.xml
@@ -145,7 +145,7 @@
                     android:paddingStart="@dimen/dimen_10dp"
                     android:background="@drawable/edittext_corner"
                     android:inputType="number"
-                    android:textColor="@color/textColor"
+                    android:textColor="@android:color/black"
                     android:layout_marginTop="8dp" />
             </LinearLayout>
 
