--- a/app/src/main/res/layout/fragment_contact_details.xml
+++ b/app/src/main/res/layout/fragment_contact_details.xml
@@ -158,12 +158,11 @@
                         android:id="@+id/etxt_landmark"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:padding="10dp"
+                        android:paddingStart="10dp"
                         android:background="@drawable/edittext_corner"
                         android:fontFamily="@font/josefin_sans"
                         android:inputType="text"
-                        android:textColor="#000"
-                        android:textSize="16sp" />
+                        android:textColor="#000"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -215,7 +214,6 @@
                             android:inputType="phone"
                             android:maxLength="9"
                             android:paddingStart="@dimen/dimen_10dp"
-                            android:paddingLeft="@dimen/dimen_10dp"
                             android:tag="+256 "
                             android:textColor="@android:color/black"
                             android:textColorHint="@android:color/black" />
@@ -239,7 +237,7 @@
                         android:id="@+id/etxt_email"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:padding="10dp"
+                        android:paddingStart="10dp"
                         android:background="@drawable/edittext_corner"
                         android:fontFamily="@font/josefin_sans"
                         android:inputType="textEmailAddress"
@@ -275,7 +273,7 @@
                         android:id="@+id/etxt_next_of_kin_name"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:padding="10dp"
+                        android:paddingStart="10dp"
                         android:background="@drawable/edittext_corner"
                         android:fontFamily="@font/josefin_sans"
                         android:inputType="text"
@@ -301,7 +299,7 @@
                         android:id="@+id/etxt_next_of_kin_second_name"
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:padding="10dp"
+                        android:paddingStart="10dp"
                         android:background="@drawable/edittext_corner"
                         android:fontFamily="@font/josefin_sans"
                         android:inputType="text"
@@ -355,7 +353,7 @@
                     <TextView
                          android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.3"
+                        android:layout_weight="0.1"
                         android:background="@drawable/edittext_left_corners_green"
                         android:gravity="center"
                         android:text="+256"
@@ -367,7 +365,7 @@
                         android:id="@+id/etxt_kin_contact"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.7"
+                        android:layout_weight="0.5"
                         android:background="@android:color/transparent"
                         android:fontFamily="@font/josefin_sans"
                         android:gravity="center_vertical"
