--- a/app/src/main/res/layout/fragment_personal_details.xml
+++ b/app/src/main/res/layout/fragment_personal_details.xml
@@ -66,11 +66,10 @@
                 android:id="@+id/etxt_fullname"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                android:paddingStart="@dimen/dimen_10dp"
                 android:padding="10dp"
                 android:background="@drawable/edittext_corner"
-                android:inputType="number"
-                android:textColor="@color/textColor"
+                android:inputType="text"
+                android:textColor="@color/black"
                 android:layout_marginTop="4dp" />
 
             <TextView
@@ -90,8 +89,7 @@
                 android:background="@drawable/edittext_corner"
                 android:fontFamily="@font/josefin_sans"
                 android:inputType="text"
-                android:textColor="#000"
-                android:textSize="18sp" />
+                android:textColor="#000" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -109,8 +107,7 @@
                 android:background="@drawable/edittext_corner"
                 android:fontFamily="@font/josefin_sans"
                 android:inputType="text"
-                android:textColor="#000"
-                android:textSize="18sp" />
+                android:textColor="#000" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -140,12 +137,11 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/edittext_corner"
-                android:drawableEnd="@android:drawable/ic_menu_my_calendar"
+                android:drawableEnd="@drawable/ic_baseline_date_range_24"
                 android:fontFamily="@font/josefin_sans"
                 android:inputType="text"
-                android:padding="8dp"
-                android:textColor="#000"
-                android:textSize="18sp" />
+                android:padding="10dp"
+                android:textColor="#000"/>
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
