--- a/app/src/main/res/layout/fragment_wallet_account.xml
+++ b/app/src/main/res/layout/fragment_wallet_account.xml
@@ -556,7 +556,7 @@
                                     android:layout_marginTop="5dp"
                                     app:layout_constraintBottom_toTopOf="@id/layout_id_number"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toEndOf="@id/img_id_front"
+                                    app:layout_constraintStart_toEndOf="@id/img_display_id_front"
                                     app:layout_constraintTop_toBottomOf="@id/view">
 
 
@@ -585,7 +585,7 @@
                                     android:layout_marginTop="5dp"
                                     app:layout_constraintBottom_toTopOf="@id/layout_expiry_date"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toEndOf="@id/img_id_front"
+                                    app:layout_constraintStart_toEndOf="@id/img_display_id_front"
                                     app:layout_constraintTop_toBottomOf="@id/layout_id_type">
 
                                     <ImageView
@@ -613,7 +613,7 @@
                                     android:layout_marginTop="5dp"
                                     app:layout_constraintBottom_toBottomOf="parent"
                                     app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintStart_toEndOf="@id/img_id_front"
+                                    app:layout_constraintStart_toEndOf="@id/img_display_id_front"
                                     app:layout_constraintTop_toBottomOf="@id/layout_id_number">
 
                                     <ImageView
@@ -1395,6 +1395,7 @@
                             android:padding="@dimen/dimen_10dp">
 
                             <RelativeLayout
+                                android:id="@+id/layout_customer_support"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
 
@@ -1417,6 +1418,7 @@
                                     android:textStyle="bold" />
 
                                 <ImageView
+                                    android:id="@+id/chevron_customer_support"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentEnd="true"
@@ -1424,6 +1426,7 @@
                                     android:src="@drawable/ic_chevron_right" />
 
                                 <View
+                                    android:id="@+id/view_customer_support"
                                     android:layout_width="match_parent"
                                     android:layout_height="1dp"
                                     android:layout_below="@id/tollFree_email_liveChat"
@@ -1431,7 +1434,118 @@
                                     android:background="#F9F7FE" />
 
                             </RelativeLayout>
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:id="@+id/layout_customer_support_menu"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginTop="5dp"
+                                android:paddingStart="5dp"
+                                android:paddingTop="8dp"
+                                android:paddingEnd="5dp"
+                                android:paddingBottom="10dp"
+                                android:background="@drawable/rounded_gray_background"
+                                android:visibility="gone">
 
+
+
+                                <LinearLayout
+                                    android:id="@+id/layout_toll_free"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="5dp"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent">
+
+                                    <ImageView
+                                        android:layout_width="20dp"
+                                        android:layout_height="20dp"
+                                        android:layout_gravity="end"
+                                        android:src="@drawable/ic_boss" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="match_parent"
+                                        android:gravity="center_vertical"
+                                        android:paddingLeft="@dimen/dimen_10dp"
+                                        android:text="Toll Free Number"
+                                        android:textStyle="bold"
+                                        android:textColor="@color/textColor" />
+
+
+
+                                </LinearLayout>
+                                <View
+                                    android:id="@+id/view9"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="1dp"
+                                    app:layout_constraintTop_toBottomOf="@id/layout_toll_free"
+                                    app:layout_constraintBottom_toTopOf="@id/layout_email"
+                                    android:layout_marginTop="5dp"
+                                    android:background="#F9F7FE" />
+                                <LinearLayout
+                                    android:id="@+id/layout_email"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="8dp"
+                                    android:layout_marginStart="5dp"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toBottomOf="@id/view9">
+
+                                    <ImageView
+                                        android:layout_width="20dp"
+                                        android:layout_height="20dp"
+                                        android:layout_gravity="end"
+                                        android:src="@drawable/ic_hierarchy" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="match_parent"
+                                        android:gravity="center_vertical"
+                                        android:paddingLeft="@dimen/dimen_10dp"
+                                        android:text="Email"
+                                        android:textStyle="bold"
+                                        android:textColor="@color/textColor" />
+
+                                </LinearLayout>
+                                <View
+                                    android:id="@+id/view10"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="1dp"
+                                    app:layout_constraintTop_toBottomOf="@id/layout_email"
+                                    app:layout_constraintBottom_toTopOf="@id/layout_live_chat"
+                                    android:layout_marginTop="5dp"
+                                    android:background="#F9F7FE" />
+                                <LinearLayout
+                                    android:id="@+id/layout_live_chat"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="8dp"
+                                    android:layout_marginStart="5dp"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toBottomOf="@id/view10">
+
+                                    <ImageView
+                                        android:layout_width="20dp"
+                                        android:layout_height="20dp"
+                                        android:layout_gravity="end"
+                                        android:src="@drawable/ic_location_pin" />
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="match_parent"
+                                        android:gravity="center_vertical"
+                                        android:paddingLeft="@dimen/dimen_10dp"
+                                        android:text="Live Chat"
+                                        android:textStyle="bold"
+                                        android:textColor="@color/textColor" />
+
+                                </LinearLayout>
+
+
+                            </androidx.constraintlayout.widget.ConstraintLayout>
                             <RelativeLayout
                                 android:id="@+id/share_app"
                                 android:layout_width="match_parent"
