--- a/app/src/main/res/layout/login_dialog_otp.xml
+++ b/app/src/main/res/layout/login_dialog_otp.xml
@@ -56,13 +56,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="@dimen/dimen_8dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp">
         <EditText
             android:id="@+id/otp_code1_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/edit_text_bottom_line"
-            android:layout_margin="8dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
+
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_weight="1"
             android:textSize="14sp"
             android:maxLength="1"
@@ -71,9 +77,13 @@
             android:id="@+id/otp_code2_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:background="@drawable/edit_text_bottom_line"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:textSize="14sp"
             android:maxLength="1"
             android:inputType="number"/>
@@ -81,9 +91,13 @@
             android:id="@+id/otp_code3_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:background="@drawable/edit_text_bottom_line"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:textSize="14sp"
             android:maxLength="1"
             android:inputType="number"/>
@@ -91,7 +105,11 @@
             android:id="@+id/otp_code4_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:background="@drawable/edit_text_bottom_line"
             android:textSize="14sp"
@@ -101,7 +119,11 @@
             android:id="@+id/otp_code5_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:padding="14dp"
             android:background="@drawable/edit_text_bottom_line"
@@ -112,7 +134,11 @@
             android:id="@+id/otp_code6_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:padding="14dp"
             android:background="@drawable/edit_text_bottom_line"
