--- a/app/src/main/res/layout/fragment_buy_and_sell_home.xml
+++ b/app/src/main/res/layout/fragment_buy_and_sell_home.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:elevation="5dp">
         <FrameLayout
-            android:id="@+id/orderslayout"
+            android:id="@+id/layout_buy_sell"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
