--- a/app/src/main/res/layout/login_dialog_otp.xml
+++ b/app/src/main/res/layout/login_dialog_otp.xml
@@ -4,8 +4,11 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="#F1F5F8"
-    android:paddingBottom="10dp">
+    android:background="@drawable/background_round_white"
+    android:layout_marginTop="5dp"
+    android:paddingBottom="10dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp">
 
     <!--Title-->
     <LinearLayout
@@ -13,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/colorPrimary">
+        android:background="@drawable/top_rounded_blue">
 
         <TextView
             android:id="@+id/login_otp_title_label"
