--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -5,7 +5,7 @@
         android:id="@+id/walletHomeFragment"
         android:enabled="true"
         android:icon="@drawable/home"
-        android:title="Home"
+        android:title="HOME"
         app:showAsAction="ifRoom" />
 
 
@@ -14,21 +14,21 @@
         android:id="@+id/walletCouponsFragment"
         android:enabled="true"
         android:icon="@drawable/coupon"
-        android:title="Coupons"
+        android:title="COUPONS"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/walletBuySellFragment"
         android:enabled="true"
         android:icon="@drawable/ic_buy_sell"
-        android:title="Buy &amp; Sell"
+        android:title="BUY &amp; SELL"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/walletAccountFragment"
         android:enabled="true"
         android:icon="@drawable/user"
-        android:title="Account"
+        android:title="ACCOUNT"
         app:showAsAction="ifRoom" />
 <!--    <item-->
 <!--        android:id="@+id/walletSettlementFragment"-->
@@ -111,7 +111,7 @@
 <!--        android:id="@+id/walletCartFragment"-->
 <!--        android:enabled="false"-->
 <!--        android:icon="@drawable/ic_shopping_cart"-->
-<!--        android:title="Addresses"-->
+<!--        android:title="Cart"-->
 <!--        app:showAsAction="ifRoom"-->
 <!--        android:visible="false"/>-->
 
